welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: not found: value estSureBiscuit
while (estSureBiscuit()==false) {
       ^