welcome.lessons.welcome.loopfor.LoopFor.scala.code

while (estSureBiscuit()==false) {
	avance()
} 
prendBiscuit()
for (nbpas <- 1 to 7) {
	recule()
}
